<resources>
    <string name="app_name">cst338_project02_group3</string>
    <string name="welcome">WELCOME!</string>
    <string name="find_matches">Find Matches</string>
    <string name="view_matches">View Matches</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="site_name">Placeholder</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="welcome_admin">Welcome, Admin!</string>
    <string name="add_users">Add Users</string>
    <string name="delete_users">Delete Users</string>
    <string name="user_reports">User Reports</string>
    <string name="find_your_otter_half">Find Your Otter Half!</string>
    <string name="preference_file_key">cst338PreferenceFileNameDatingApp</string>
    <string name="preference_userId_key">cst338PreferenceUserIdKeyDatingApp</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="edit_your_age">Edit your age</string>
    <string name="edit_your_gender">Edit your gender</string>
    <string name="edit_your_bio">Edit your bio</string>
    <string name="change_your_profile_picture">Change your profile picture</string>
    <string name="logout">Logout</string>
    <string name="welcome_user">Welcome %1$s!</string>
    <string name="admin">Admin</string>
    <string name="save_changes">Save Changes</string>
    <string name="current_age">Current Age:</string>
    <string name="current_gender">Current Gender:</string>
    <string name="current_bio">Current Bio:</string>
    <string name="current_pfp">Current PFP:</string>
    <string name="reported_users">Reported Users</string>
    <string name="users_reported">Users Reported:</string>
    <string name="no_users_reported_at_the_moment">No Users reported at the moment</string>
    <string name="update_log">Update Log</string>
    <string name="main_menu">Main Menu</string>
    <string name="user_s_image">User\'s image</string>
    <string name="name_age_gender">%1$s, %2$d, %3$s</string>
    <string name="bio">Bio</string>
    <string name="user_biography">%1$s</string>
    <string name="back">Back</string>
    <string name="bio_text">Bio Text</string>
    <string name="view_profile">View Profile</string>
    <string name="my_matches_textview">My Matches</string>
    <string name="name_mymatch">Name:</string>
    <string name="age_mymatch">Age:</string>
    <string name="bio_mymatch">Bio:</string>
    <string name="my_matches">My Matches</string>
    <string name="find_my_match_textview">Find My Match!</string>
    <string name="preferred_age">Preferred Age</string>
    <string name="preferred_gender">Preferred Gender</string>
    <string name="find_matches_button">Find Matches!</string>
    <string name="currentAgeString">%1$d</string>
    <string name="current_name">Current Name:</string>
    <string name="edit_your_name">Edit your name</string>
    <string name="currentNameString">%1$s</string>
    <string name="currentGenderString">%1$s</string>
    <string name="currentBioString">%1$s</string>
    <string name="currentPfpString">%1$s</string>
    <string name="yes">Like</string>
    <string name="no">No</string>
    <string name="report">Report</string>
    <string name="edit_your_preferences">Edit your Preferences</string>
    <string name="age">Age</string>
    <string name="ageColon">Age:</string>
    <string name="genderColon">Gender:</string>
    <string name="gender">Gender</string>
    <string name="edit_preferences">Edit Preferences</string>
    <string name="ban_users">Ban Users</string>
    <string name="ban_users_title">Ban Users</string>
    <string name="banned_users_text">Banned users:</string>
    <string name="ban_user_submit_button_text">Ban</string>
    <string name="ban_edit_text">Type in the ID number of the user you want to ban/unban:</string>
    <string name="enter_user_id_ban_hint">Enter User Id</string>
    <string name="unban_button">Unban</string>
    <string name="set_up_your_profile">Set Up Your Profile</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="finish_profile">Finish Profile</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_age">Enter Your Age</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="what_is_your_gender">What is your gender?</string>
    <string name="enter_your_gender">Enter your Gender</string>
    <string name="bio_prompt">What should we know about you?</string>
    <string name="enter_a_brief_bio">Enter a brief bio</string>
    <string name="enter_the_url_for_a_photo_of_you">Enter the URL for a photo of you</string>
    <string name="enter_a_url">Enter a URL</string>
    <string name="set_up_your_dating_preferences">Set Up Your Dating Preferences</string>
    <string name="set_your_dating_preferences">Set your dating preferences</string>
    <string name="min_age_prompt">What\'s the minimum age of who you\'re interested in dating?</string>
    <string name="enter_your_age_preference">Enter your age preference</string>
    <string name="gender_pref_prompt">What gender are you interested in dating?</string>
    <string name="enter_your_gender_preference">Enter your gender preference</string>

</resources>