<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1B5D0"
    tools:context=".SetUpProfileActivity">

    <TextView
        android:id="@+id/setUpProfilePageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/set_up_your_profile"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/namePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/what_is_your_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setUpProfilePageTitle" />

    <EditText
        android:id="@+id/setNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="center"
        android:hint="@string/enter_your_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namePrompt" />

    <TextView
        android:id="@+id/agePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/how_old_are_you"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setNameEditText" />

    <EditText
        android:id="@+id/setAgeEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="center"
        android:hint="@string/enter_your_age"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/agePrompt" />

    <TextView
        android:id="@+id/genderPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/what_is_your_gender"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setAgeEditText" />

    <EditText
        android:id="@+id/setGenderEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="center"
        android:hint="@string/enter_your_gender"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderPrompt" />

    <TextView
        android:id="@+id/bioPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/bio_prompt"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setGenderEditText" />

    <EditText
        android:id="@+id/setBioEditText"
        android:layout_width="300dp"
        android:layout_height="64dp"
        android:gravity="center"
        android:hint="@string/enter_a_brief_bio"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bioPrompt" />

    <TextView
        android:id="@+id/pfpPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/enter_the_url_for_a_photo_of_you"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setBioEditText" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:id="@+id/setPfpEditText"
        android:gravity="center"
        android:hint="@string/enter_a_url"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pfpPrompt"/>

    <Button
        android:id="@+id/setUpProfileNextButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/set_your_dating_preferences"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>