<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1B5D0"
    tools:context=".FindMatchesActivity">

    <TextView
        android:id="@+id/FindMatchesPageTitle"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/find_my_match_textview"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPreferredAgeEditText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:hint="@string/preferred_age"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FindMatchesPageTitle" />

    <EditText
        android:id="@+id/editPreferredGenderEditText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:hint="@string/preferred_gender"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPreferredAgeEditText" />



    <Button
        android:id="@+id/editFindMatchesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/find_matches_button"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPreferredGenderEditText" />

    <Button
        android:id="@+id/findMatchesBackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/back"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>