<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportLogs">


    <TextView
        android:id="@+id/reportTitle"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dip"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/reported_users"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/reportLogsDisplay"
        android:layout_width="390dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dip"
        android:padding="8dp"
        android:text="@string/users_reported"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportTitle" />

    <Button
        android:id="@+id/updateReportBtn"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_margin="16dp"
        android:text="@string/update_log"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reportLogsDisplay" />

    <Button
        android:id="@+id/mainMenuAdmin"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_margin="16dp"
        android:text="@string/main_menu"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/updateReportBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>