<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcomePageActivity">

    <TextView
        android:id="@+id/welcomePageTitleTextView"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/welcomePageFindMatchesButton"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:text="@string/find_matches"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomePageTitleTextView" />

    <Button
        android:id="@+id/welcomePageViewMatchesButton"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:text="@string/view_matches"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomePageFindMatchesButton" />

    <Button
        android:id="@+id/welcomePageEditProfileButton"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:text="@string/edit_profile"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomePageViewMatchesButton" />

</androidx.constraintlayout.widget.ConstraintLayout>